<resources>
    <string name="app_name">Torino</string>

    <!-- Layout del iniciar sesion -->
    <string name="link_iniciar_sesion">Iniciar sesión</string>
    <string name="link_crear_cuenta">Crear una cuenta</string>
    <string name="link_password_forget">¿Ha olvidado la contraseña?</string>
    <string name="slogan"> ¡Sin rodeos!</string>
    <string name="titulo_torino"> TORINO </string>
    <string name="text_input_password">Contraseña </string>
    <string name="text_input_email">Email </string>
    <string name="text_input_nickname"> Nickname </string>


    <!-- Layout del login -->
    <string name="titulo_login">Bienvenido a TORINO</string>
    <string name="texto_explicacion_login">Inicia sesión y empieza a compartir ¡SIN RODEOS! O bien puedes iniciar sesión si ya tienes una cuenta previa</string>
    <string name="boton_iniciar_sesion">INICIAR SESIÓN</string>
    <string name="boton_crear_cuenta">CREAR CUENTA</string>
    <string name="texto_derechos_autor">Todos los derechos reservados a TORINO©</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="titulo_email">Correo</string>
    <string name="titulo_nickname">Nickname</string>
    <string name="boton_guardar">GUARDAR</string>
    <string name="boton_nueva_publicacion">T</string>

    <!-- Layout de Chats -->
    <string name="titulo_chats">Chats</string>
    <string name="publicar">Publicar</string>

    <!-- Layout del notificaciones -->
    <string name="titulo_notificaciones"> Notificaciones </string>

</resources>