<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <TextView
        android:id="@+id/bienvenida"
        android:layout_width="152dp"
        android:layout_height="85dp"
        android:layout_gravity="left"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/k2d_regular"
        android:gravity="center_vertical"
        android:text="@string/titulo_login"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo_torino"
        android:layout_width="267dp"
        android:layout_height="236dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo_torino"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bienvenida" />

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="319dp"
        android:layout_height="63dp"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/k2d_regular"
        android:gravity="center_horizontal"
        android:text="@string/texto_explicacion_login"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_torino" />


    <Button
        android:id="@+id/button_crear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:background="@drawable/redondear_boton"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/k2d_regular"
        android:onClick="lanzarCrearCuenta"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/boton_crear_cuenta"
        app:backgroundTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descripcion" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:background="@drawable/redondear_boton"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/k2d_regular"
        android:onClick="lanzarLogin"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/boton_iniciar_sesion"
        app:backgroundTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_crear" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/k2d_regular"

        android:gravity="center_horizontal"
        android:text="@string/texto_derechos_autor"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>