<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ThirdFragment">

    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <TextView
        android:id="@+id/titulo_torino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="165dp"
        android:fontFamily="@font/k2d_regular"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/titulo_torino"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:fontFamily="@font/k2d_regular"
        android:gravity="center"
        android:text="@string/slogan"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo_torino" />

    <EditText
        android:id="@+id/email"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/k2d_regular"
        android:hint="@string/text_input_email"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slogan" />

    <EditText
        android:id="@+id/password"
        android:layout_width="359dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/k2d_regular"
        android:hint="@string/text_input_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="185dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:background="@drawable/redondear_boton"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/k2d_regular"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/boton_iniciar_sesion"
        app:backgroundTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <TextView
        android:id="@+id/link_password_forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/k2d_regular"
        android:gravity="center"
        android:text="@string/link_password_forget"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_login" />

    <TextView
        android:id="@+id/link_crear_cuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/k2d_regular"
        android:gravity="center"
        android:text="@string/link_crear_cuenta"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#7D0707"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/link_password_forget" />
</androidx.constraintlayout.widget.ConstraintLayout>